# Project_Starter

./: conf.py  pyproject.toml  requirements.txt
docs/: api.rst  examples.rst  index.rst
src/: #cpp_projects.py#  #main.py#  .#cpp_projects.py  main.py
tests/: Project_Starter_tests.py
