[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Project_Starter"
description = "Create starter C++ and Python projects."
readme = "README.md"
license = {text = "MIT License"}
version = "0.5.0"
requires-python = ">=3.11"
authors = [
  {name = "David McFarland", email = "dmcfarland8031@gmai.com"}
]
keywords = ["tools", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Windows",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development"
]
dependencies = [
    "requests>=2.1",
    "git>=3.2",
]

[project.urls]
"Homepage" = "https://github.com/killrpenguin/Project_Starter"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
